--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- src/app/app.component.html -->
 <div class="app-container">
   <div class="asset-list">
     <div *ngFor="let asset of assets" 
@@ -18,7 +19,7 @@
 
     <div *ngIf="selectedAsset" class="chart-container">
       <h3>Historical Data</h3>
-      <app-historical-chart [assetId]="selectedAsset.id"></app-historical-chart>
+      <app-historical-chart [symbol]="selectedAsset.symbol"></app-historical-chart>
     </div>
   </div>
 </div>
